# court-vision

./: .gitignore  CLAUDE.md  README.md
app/: App.tsx  app.json  index.ts  package-lock.json  package.json
app/src/api/: client.ts
app/src/audio/: useRecorder.ts
app/src/components/: CountersList.tsx  PlaybackBar.tsx
app/src/court/: CourtBackground.tsx  PlayRenderer.tsx  coords.ts  playback.ts
app/src/screens/: HomeScreen.tsx  ScoutingScreen.tsx
app/src/types/: play.ts
backend/: .env.example  README.md  pyproject.toml  pytest.ini
backend/app/: config.py  main.py  schemas.py
backend/app/prompts/: few_shots.py  vocabulary_prompt.py
backend/app/routes/: parse_play.py  roster.py  scout.py  transcribe.py
backend/app/services/: anthropic_client.py  mcp_client.py  whisper_client.py
backend/scripts/: debug_team_id.py  smoke_mcp.py
backend/tests/: test_court_locations.py  test_integration.py  test_parse_play.py  test_schemas.py
docs/: SESSION_LOG.md  architecture.md  play-schema.md  vocabulary.md
scripts/: build-web.ps1  dev.ps1  dev.sh
