[project]
name = "court-vision-backend"
version = "0.1.0"
description = "Court Vision backend — transcribe, parse-play, scout endpoints"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "anthropic>=0.40",
    "openai>=1.55",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
    # nba_stats_mcp imported directly (server-side; not as MCP transport).
    # Editable install from a sibling clone — see scripts/setup-mcp.ps1.
    "nba_api>=1.7.0",
    "beautifulsoup4>=4.12.0",
    "cachetools>=5.5.0",
    "python-dotenv>=1.0.1",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
